--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,16 @@ li.mainnav {
 li.mainnav:last-child { 
 }
 
+.navbar-default {
+	background-color: #000000;
+	background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
+}
+
+.logolink {
+	float:left;
+	padding: 0;
+}
+
 .mainlogo {
 	color: #ffffff;
 	text-align: center;
