--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,14 @@ nav.navbar  {
 	margin-bottom: 0;
 }
 
+.navbar-default .navbar-nav>li>a {
+	color: #FFFFFF;
+}
+
+.navbar-default .navbar-nav>li>a.hover {
+	color: #FFFFFF;
+}
+
 li.mainnav {
 	display: inline-block;
 	list-style-type: none;
@@ -25,13 +33,18 @@ li.mainnav {
 	padding-left: 15px;
 	height: 31px;
 }
-
+.mancontainer {
+	margin-top: 52px;
+}
 .sidenav_nav {
 	position: absolute;
 	top: 52px;
 	width: 100%;
 }
 
+.jumbotron {
+	padding: 0;
+}
 li.mainnav:last-child { 
 }
 
