--- a/public/css/main.css
+++ b/public/css/main.css
@@ -177,6 +177,22 @@ footer {
 	width: 100%;
 }
 
+p.articleteaser:first-child::first-letter {
+    font-size: 24px;
+    color:#F5645C;
+    font-family: sans-serif;
+    background: #F5F1E9;
+    padding:5px 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+p.articleteaser::first-letter {
+    font-size: 30px;
+    color:#000000; 
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
 and (min-device-width : 320px) 
